--- a/src/app/components/camera/camera.component.html
+++ b/src/app/components/camera/camera.component.html
@@ -1,5 +1,6 @@
 <div class="container">
   <app-sidebar></app-sidebar>
+  <app-hamburger></app-hamburger>
   <div class="camera-container">
     <div class="camera-block">
       <div *ngFor="let item of cameraData; let i = index" class="camera-item">
