--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,6 @@
 <div class="container">
   <app-sidebar></app-sidebar>
+  <app-hamburger></app-hamburger>
   <div class="home-container">
     <img src="assets/images/logo.png" alt="">
   </div>
