--- a/src/app/components/settings/settings.component.html
+++ b/src/app/components/settings/settings.component.html
@@ -1,5 +1,6 @@
 <div class="container">
   <app-sidebar></app-sidebar>
+  <app-hamburger></app-hamburger>
   <div class="settings-container">
     <div class="title">
       SETTINGS COMMING SOON
