--- a/src/app/components/reporting/reporting.component.html
+++ b/src/app/components/reporting/reporting.component.html
@@ -1,5 +1,6 @@
 <div class="container">
   <app-sidebar></app-sidebar>
+  <app-hamburger></app-hamburger>
   <div class="reporting-container">
     <div class="title">
       REPORTING COMMING SOON
